# demo-server

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml  requirements.txt  sshd_config  sshd_config.conf
.github/workflows/: actions.yaml  deploy.yaml  test.yaml
locale/vi/LC_MESSAGES/: django.mo  django.po
src/: admin.py  apps.py  asgi.py  env.py  exceptions.py  forms.py  funks.py  models.py  settings.py  signals.py  urls.py  views.py  widgets.py  wsgi.py
src/management/commands/: generate_config.py
src/middleware/: disallowed_host.py  log.py  message.py
src/migrations/: 0001_initial.py  0002_alter_project_user.py  0003_rename_secret_project_secret_key_project_created_at_and_more.py  0004_alter_project_user.py
src/static/admin/css/: login.css  signup.css
src/templates/: 502.html-tpl  nginx.conf-tpl  sshd.user.conf-tpl
src/templates/admin/: login.html  signup.html
